--- a/public/styles.css
+++ b/public/styles.css
@@ -1,68 +1,107 @@
-/* styles.css */
+/* General styles */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
+    background: linear-gradient(135deg, #2c3e50, #4ca1af);
+    color: #ecf0f1;
     margin: 0;
-    padding: 0;
+    padding: 20px;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
     flex-direction: column;
+    align-items: center;
+    min-height: 100vh;
 }
 
 h1 {
-    color: #333;
+    color: #ecf0f1;
     margin-bottom: 20px;
+    text-shadow: 1px 1px 2px #000;
 }
 
+/* Form styles */
 form {
-    background-color: #fff;
+    background: #34495e;
+    border: 1px solid #2c3e50;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 500px;
-}
-
-form div {
-    margin-bottom: 15px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+    width: 100%;
+    max-width: 500px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
 }
 
 textarea {
-    width: 93%;
+    width: 100%;
     height: 100px;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #2c3e50;
     border-radius: 5px;
-    resize: none;
     font-size: 16px;
+    background-color: #2c3e50;
+    color: #ecf0f1;
 }
 
 select {
     width: 100%;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #2c3e50;
     border-radius: 5px;
     font-size: 16px;
-    margin-bottom: 10px;
+    background-color: #2c3e50;
+    color: #ecf0f1;
+    appearance: none;
+}
+
+div {
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Center items horizontally */
 }
 
 button {
-    width: 100%;
-    padding: 10px;
-    background-color: #4CAF50;
-    color: white;
+    padding: 10px 15px;
+    background: linear-gradient(135deg, #4ca1af, #357ab7);
     border: none;
     border-radius: 5px;
+    color: white;
     font-size: 16px;
     cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-top: 10px; /* Optional: Add some space between the select and button */
+    align-self: center; /* Center button horizontally */
 }
 
 button:hover {
-    background-color: #45a049;
+    background: linear-gradient(135deg, #357ab7, #4ca1af);
 }
 
+/* Audio player styles */
 audio {
     margin-top: 20px;
-    width: 300px;
+    width: 100%;
+    max-width: 500px;
+    outline: none;
+}
+
+/* Result styles */
+#fetching-text {
+    margin-top: 20px;
+    font-style: italic;
+    color: #bdc3c7;
+}
+
+.result-div {
+    margin-top: 20px;
+    background: #34495e;
+    padding: 15px;
+    border-radius: 5px;
+    width: 100%;
+    max-width: 500px;
+    border-left: 5px solid #4ca1af;
+}
+
+p {
+    margin: 0;
+    color: #ecf0f1;
 }
